--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.40",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.7",
-    "vite": "^5.3.4"
+    "vite": "^5.4.3",
+    "vite-plugin-imagemin": "^0.6.1",
+    "vite-plugin-purgecss": "^0.2.12"
   }
 }
