--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "tailwindcss": "^3.4.7",
     "vite": "^5.4.3",
     "vite-plugin-imagemin": "^0.6.1",
-    "vite-plugin-purgecss": "^0.2.12"
+    "vite-plugin-purgecss": "^0.2.12",
+    "webpack-cli": "^5.1.4"
   }
 }
