--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-rnd": "^10.4.13",
     "react-router-dom": "^6.25.1",
     "vite-plugin-pwa": "^0.20.5"
   },
