--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-# VITE_URL = https://x-backend-ujvu.onrender.com
-VITE_URL = http://localhost:8080
+VITE_URL = https://x-backend-ujvu.onrender.com
+# VITE_URL = http://localhost:8080
 VITE_FIREBASE_API_KEY = AIzaSyB8jgJaqqoNe2T-N7cN7AkkD6938OizzbU
