--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.51.21",
-    "emoji-picker-react": "^4.11.1",
+    "emoji-picker-react": "^4.12.0",
     "firebase": "^10.14.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -19,6 +19,7 @@
     "react-icons": "^5.2.1",
     "react-rnd": "^10.4.13",
     "react-router-dom": "^6.25.1",
+    "react-top-loading-bar": "^2.3.1",
     "vite-plugin-pwa": "^0.20.5"
   },
   "devDependencies": {
