--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.2.1",
     "react-rnd": "^10.4.13",
     "react-router-dom": "^6.25.1",
+    "react-syntax-highlighter": "^15.5.0",
     "react-top-loading-bar": "^2.3.1",
     "vite-plugin-pwa": "^0.20.5"
   },
